--- a/package.json
+++ b/package.json
@@ -1,29 +1,76 @@
 {
-  "name": "isyuricunha",
-  "description": "Personal quick link page",
-  "version": "0.1.0",
   "private": true,
-  "author": {
-    "name": "Yuri Cunha",
-    "url": "https://x.com/isyuricunha"
-  },
+  "name": "links",
+  "version": "0.0.0",
+  "description": "tszhong0411's social media links",
   "license": "MIT",
+  "author": "tszhong0411 <me@honghong.me> (https://github.com/tszhong0411/)",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/tszhong0411/links.git"
+  },
+  "type": "module",
   "scripts": {
-    "dev": "next dev",
     "build": "next build",
+    "check": "pnpm lint && pnpm type-check && pnpm format:check && pnpm check:spelling && pnpm check:knip",
+    "check:knip": "knip",
+    "check:spelling": "cspell --show-context --show-suggestions",
+    "clean": "rm -rf .next",
+    "dev": "next dev --turbo",
+    "format:check": "prettier --cache --check --ignore-path .gitignore --ignore-path .prettierignore .",
+    "format:write": "prettier --cache --write --list-different --ignore-path .gitignore --ignore-path .prettierignore .",
+    "preinstall": "npx only-allow pnpm",
+    "lint": "eslint . --max-warnings 0",
+    "lint:fix": "eslint --fix .",
+    "prepare": "simple-git-hooks",
     "start": "next start",
-    "lint": "next lint"
+    "type-check": "tsc --noEmit"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-git"
+    }
   },
   "dependencies": {
-    "@vercel/analytics": "^1.1.1",
-    "next": "^14.0.4",
-    "eslint-config-next": "^14.0.0",
-    "eslint-config-next": "^14.0.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "sass": "1.69.5"
+    "@tszhong0411/utils": "^0.0.17",
+    "geist": "^1.3.1",
+    "next": "15.1.6",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-icons": "^5.4.0"
   },
   "devDependencies": {
-    "eslint": "^8.55.0"
+    "@commitlint/cli": "19.6.1",
+    "@commitlint/config-conventional": "19.6.0",
+    "@cspell/dict-fullstack": "^3.2.3",
+    "@cspell/dict-npm": "^5.1.23",
+    "@cspell/dict-software-terms": "^4.2.4",
+    "@tszhong0411/eslint-config": "^0.1.26",
+    "@tszhong0411/prettier-config": "^0.0.13",
+    "@tszhong0411/tsconfig": "^0.0.10",
+    "@types/node": "22.10.10",
+    "@types/react": "19.0.8",
+    "@types/react-dom": "19.0.3",
+    "cspell": "^8.17.2",
+    "cz-git": "^1.11.0",
+    "eslint": "9.19.0",
+    "knip": "^5.43.3",
+    "lint-staged": "^15.4.2",
+    "postcss": "^8.5.1",
+    "postcss-lightningcss": "^1.0.1",
+    "postcss-load-config": "^6.0.1",
+    "prettier": "^3.4.2",
+    "simple-git-hooks": "^2.11.1",
+    "tailwindcss": "^3.4.17",
+    "typescript": "5.7.3"
+  },
+  "lint-staged": {
+    "*.{cjs,mjs,js,jsx,cts,mts,ts,tsx,json}": "eslint --fix",
+    "**/*": "prettier --write --ignore-unknown"
+  },
+  "packageManager": "pnpm@9.15.4",
+  "simple-git-hooks": {
+    "pre-commit": "pnpm lint-staged",
+    "commit-msg": "pnpm commitlint --edit $1"
   }
 }
